[gd_scene load_steps=2 format=3 uid="uid://c0v0qk7t6d2wq"]

[ext_resource type="Script" uid="uid://cdy1apa4lp8dq" path="res://components/movement/jump_component.gd" id="1_rj7lb"]

[node name="JumpComponent" type="Node2D"]
script = ExtResource("1_rj7lb")

[node name="JumpBufferTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
